refactor(starship): refactor starship installer

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
     name = steven
-    email = 1085320540@qq.com
+    email = stevenyjc@outlook.com
 [core]
     editor = nvim
 [init]
@@ -8,8 +8,3 @@
 [credential]
 	helper = store
 
-[filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
-	required = true
